# veridocs

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  README.md  THEMING.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
.github/workflows/: ci.yml
bazel/: BUILD.bazel  defs.bzl
example/: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  nginx.conf  veridocs.config.json
example/.github/workflows/: pages.yml
example/source/: index.html.md
example/source/includes/: _errors.md  _pagination.md
example/theme/: variables.css
frontends/nextjs-shadcn/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontends/nextjs-shadcn/app/: globals.css  layout.tsx  page.tsx
frontends/nextjs-shadcn/components/: docs-shell.tsx
frontends/nextjs-shadcn/lib/: docs.ts
src/: build.js  cli.js  index.js  init.js  markdown.js  parser.js  serve.js  template.js
test/: build.test.js  parser.test.js
themes/default/: layout.html
themes/default/css/: theme.css
themes/default/js/: app.js
